--- a/config.toml
+++ b/config.toml
@@ -28,10 +28,10 @@ summaryLength = 30
 
 [params]
   google_analytics_id=""
-  homepage_button_link = '/docs'
+  homepage_button_link = 'docs'
   homepage_button_text = 'Read The Docs'
   homepage_intro = 'A CNCjs pendant for mobile web and the Elgato Stream Deck'
-  homepage_image = '/images/web.gif'
+  homepage_image = 'images/web.gif'
 
   ## You can enable to add anchor links to header elements
   enable_anchor_link = true
