--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "cncjs-pendant-streamdeck-docs",
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "Billiam <billiamthesecond@gmail.com>",
+  "author": "Billiam",
   "license": "MIT",
   "scripts": {
     "lint:markdown": "markdownlint 'content/**/*.md'"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.0",
+    "@codemirror/lint": "^6.0.0",
+    "cncjs-pendant-streamdeck-validator": "^1.0.0",
+    "codemirror": "^6.0.1",
     "husky": "^8.0.1",
+    "json-source-map": "^0.6.1",
+    "jsonschema": "^1.4.1",
     "markdownlint-cli": "^0.32.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "url": "^0.11.0"
   }
 }
