--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "Billiam",
   "license": "MIT",
   "scripts": {
-    "lint:markdown": "markdownlint 'content/**/*.md'"
+    "lint:markdown": "markdownlint 'content/**/*.md'",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.0",
@@ -15,7 +16,7 @@
     "json-source-map": "^0.6.1",
     "jsonschema": "^1.4.1",
     "markdownlint-cli": "^0.32.0",
-    "prettier": "^2.7.1",
+    "prettier": "^3.3.3",
     "url": "^0.11.0"
   }
 }
